pkgconfigdir = \
  $(libdir)/pkgconfig

pkgconfig_DATA = \
  ogmrip-encode.pc \
  ogmrip-module.pc \
  ogmrip-media.pc  \
  ogmrip-file.pc   \
  ogmrip-dvd.pc    \
  ogmrip-job.pc

if HAVE_GTK_SUPPORT
pkgconfig_DATA += \
  ogmrip-encode-gtk.pc \
  ogmrip-media-gtk.pc  \
  ogmrip-file-gtk.pc   \
  ogmrip-dvd-gtk.pc
endif

