pkgconfigdir = \
  $(libdir)/pkgconfig

pkgconfig_DATA = \
  ogmrip-base.pc   \
  ogmrip-dvd.pc    \
  ogmrip-drive.pc  \
  ogmrip-encode.pc \
  ogmrip-file.pc   \
  ogmrip-job.pc    \
  ogmrip-media.pc  \
  ogmrip-module.pc

if HAVE_GTK_SUPPORT
pkgconfig_DATA += \
  ogmrip-encode-gtk.pc \
  ogmrip-file-gtk.pc   \
  ogmrip-media-gtk.pc
endif

