gsettings_SCHEMAS = \
  org.ogmrip.preferences.gschema.xml \
  org.ogmrip.profile.gschema.xml \
  org.ogmrip.lavc.gschema.xml \
  org.ogmrip.mp4.gschema.xml  \
  org.ogmrip.x264.gschema.xml \
  org.ogmrip.xvid.gschema.xml

@GSETTINGS_RULES@

EXTRA_DIST =      \
  $(gsettings_SCHEMAS)

MAINTAINERCLEANFILES = \
  Makefile.in
